# fy

./: .gitignore  Cargo.toml  Makefile  README.md  install-windows.ps1  install.sh
.github/workflows/: ci.yml
src/: clipboard.rs  main.rs  vars.rs
src/tests/: mod.rs  test_clipboard.rs
src/utils/: json.rs  mod.rs  tools.rs  url.rs
