[package]
name = "fy"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"

[profile.release]
panic = "abort"
strip = true
